# slws

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  package.xml  软件架构.drawio
include/sensor_conn/: sensor_conn.hpp
src/calibration_bench/: CMakeLists.txt  package.xml
src/calibration_bench/ECanVci/: CMakeLists.txt  ECanVci.h  libECanVci.so.1
src/calibration_bench/include/: calibration_bench.hpp  calibration_motors_can.hpp  can_comm.hpp  motor_template.h  zeroerr_motor_can.h  zeroerr_motor_struct_can.hpp
src/calibration_bench/launch/: bench1.launch.py  calibration_motors.launch.py
src/calibration_bench/src/: calibration_bench.cpp  main.cpp  motor_template.cpp  zeroerr_motor_can.cpp
src/calibration_bench/test/: test.cpp
src/sensor_process/: .gitattributes  .gitignore  package.xml  sensor_data_record.cpp
src/sensor_process/include/: sensor_process_node.hpp
src/sensor_process/include/sensor_conn/: misc.hpp  sensor_conn_modbus_tcp.hpp
src/sensor_process/include/sensor_process/: sensor_data_record.hpp
src/sensor_process/src/: main.cpp  sensor_process_node.cpp
src/sensor_process/src/sensor_conn/: sensor_conn_modbus_tcp.cpp
src/sl_interfaces/: CMakeLists.txt  package.xml
src/sl_interfaces/msg/: CalibrationBenchInfo.msg  SensorData.msg  SensorDataConnectionInfo.msg  SensorDataFrame.msg  SensorDataHeader.msg  SensorDataInfo.msg
src/sl_interfaces/sensor_process/: FinishRecorder.srv  GetSensorRecorderData.srv  SensorHeader.msg  SensorInfo.msg  SensorInsertStepInfo.srv  SensorRecordData.msg  SensorRecordStepInfo.msg  StartNewSensorRecorder.srv
src/sl_interfaces/srv/: MotorXYXZPositionControl.srv  UpdateMotorXYXZOffset.srv
test/: test_node.cpp  test_recorder.cpp
